# bitcoin-realtime

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  plan.md  pyproject.toml
docs/: latency-benchmark-baseline.md  ssd-crash-recovery.md  watchdog-monitor.md
hive-metastore/: RCA-HMS-ISSUES.md  README.md  hive-site.xml
iceberg/: README.md  create_raw_tables.sql
kafka-connect/: README.md
live-normalizer/: README.md  checkpoint_store.py  kafka_producer.py  main.py  normalizer.py  requirements.txt  rpc_client.py  zmq_listener.py
pyiceberg-sidecar/: README.md  finality_updater.py  iceberg_writer.py
scripts/: README.md  benchmark_e2e_latency.py  create-kafka-topics.sh  create_iceberg_tables.py  create_iceberg_tables_spark.py  recover-pipeline.sh  watchdog.sh
spark/: README.md
starrocks/: README.md  be.conf  flat_serving_v3.sql  flat_table_builder.py  iceberg_catalog_v3.sql
tests/: README.md  conftest.py
tests/integration/: test_catchup_mode.py  test_docker_services.py  test_iceberg_tables.py  test_kafka_e2e.py  test_kafka_to_iceberg.py  test_normalizer_live.py  test_starrocks.py
tests/unit/: test_checkpoint_store.py  test_ddl_validation.py  test_finality_updater.py  test_flat_table_builder.py  test_iceberg_writer.py  test_kafka_producer.py  test_main.py  test_normalizer.py  test_rpc_client.py  test_zmq_listener.py
validation/: README.md
